<resources>
    <string name="app_name">Huber</string>
    <string name="favorites_button">Favoriten</string>
    <string name="overview_button">Überblick</string>
    <string name="search_hint">Suche Haltestellen</string>

    <string name="direction">Richtung:</string>
    <string name="cancel">Abbrechen</string>
    <string name="ok">OK</string>

    <string name="alarm_notification">Zeit abgelaufen!</string>
    <string name="snooze">Snooze</string>
    <string name="cancel_alarm">Losgehen</string>

    <string name="title_activity_settings">Einstellungen</string>
    <string name="settings_header">Einstellungen</string>
    <string name="settings_walking_speed">Schritttempo</string>
    <string name="settings_key_walking_speed">walking_speed</string>
    <string name="settings_default_snooze">Default Snooze</string>
    <string name="settings_key_default_snooze">key_default_snooze</string>

    <string name="nav_map">Karte</string>
    <string name="nav_favorites">Favoriten</string>
    <string name="nav_disorder">Störungen</string>
    <string name="nav_settings">Einstellungen</string>
    <string name="huber_logo">Huber Logo</string>
    <string name="company_name">HUBER INDUSTRIES</string>
    <string name="separator">|</string>
    <string name="nothing_to_show">Nichts zum Anzeigen.</string>
    <string name="title_activity_disturbances">Störungen</string>
    <string name="title_activity_drawer">Activity Drawer</string>
    <string name="settings_default_start_screen">Startbildschirm</string>
    <string name="settings_key_default_start_screen">key_default_start_screen</string>
    <string name="no_directions">Keine Richtung</string>
    <string name="disturbance_title">Störungen</string>
</resources>
