<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/settings_header">
        <ListPreference
            app:defaultValue="4"
            app:entries="@array/walking_speed_entries"
            app:entryValues="@array/walking_speed_values"
            app:key="@string/settings_key_walking_speed"
            app:title="@string/settings_walking_speed"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="5"
            app:entries="@array/snooze_entries"
            app:entryValues="@array/snooze_values"
            app:key="@string/settings_key_default_snooze"
            app:title="@string/settings_default_snooze"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="5"
            app:entries="@array/snooze_entries"
            app:entryValues="@array/snooze_values"
            app:key="@string/settings_key_default_snooze"
            app:title="@string/settings_default_start_screen"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
