<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_first"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_star_24dp"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/nav_disturbance"
            android:icon="@drawable/ic_warning_black_24dp"
            android:title="@string/nav_disorder" />
    </group>
    <group
        android:id="@+id/drawer_second"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

</menu>
